# uvc-control-rs

./: Cargo.toml  action.nu  build.rs
.github/workflows/: dist-ffi.yml
include/: uvc_control.h
src/: ffi.rs  lib.rs  unix.rs  windows.rs
