[package]
name = "uvc-control"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
thiserror = "1.0.64"

[target.'cfg(unix)'.dependencies]
nusb = "0.1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
    "Win32_Devices_Usb",
    "Foundation_Collections",
] }
regex = "1.11.0"

[build-dependencies]
cbindgen = "0.24.5"

[profile.release]
panic = "abort"
lto = true
debug = true
split-debuginfo = "packed"
# strip = "debuginfo"
rpath = true
